--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mantine/next": "^4.1.4",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
