--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "tabler-icons-react": "^1.46.0",
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
