--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^4.1.4",
     "@mantine/hooks": "^4.1.4",
     "@mantine/next": "^4.1.4",
+    "@mantine/notifications": "^4.1.5",
     "ethers": "^5.6.4",
     "next": "12.1.5",
     "react": "18.0.0",
