--- a/contract/.gitignore
+++ b/contract/.gitignore
@@ -1,9 +1,7 @@
-node_modules
+node_modules/
+cache/
+build/
+typechain/
+artifacts/
+coverage*
 .env
-coverage
-coverage.json
-typechain
-
-#Hardhat files
-cache
-artifacts
