--- a/contract/package.json
+++ b/contract/package.json
@@ -1,20 +1,45 @@
 {
-  "name": "nextjs-ts-mantine-web3-starter-contract",
-  "version": "0.1.0",
+  "name": "solidity-ts-dev-stack-example",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run clean && npm run compile",
+    "clean": "npx hardhat clean",
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "coverage": "npm run build && npx hardhat coverage --temp artifacts --network coverage"
   },
-  "keywords": [],
-  "author": "erhant",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rhlsthrm/solidity-ts-dev-stack-example.git"
+  },
+  "author": "rhlsthrm",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rhlsthrm/solidity-ts-dev-stack-example/issues"
+  },
+  "homepage": "https://github.com/rhlsthrm/solidity-ts-dev-stack-example#readme",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.5",
-    "hardhat": "^2.9.3"
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^7.0.0",
+    "@typechain/hardhat": "^2.0.0",
+    "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.1",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.0.3",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "dotenv": "^9.0.2",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.1.4",
+    "hardhat": "^2.2.1",
+    "solidity-coverage": "^0.7.16",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^9.1.1",
+    "typechain": "^5.0.0",
+    "typescript": "^4.2.4"
   }
 }
