--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
