--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "cd contract && npm install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@mantine/core": "^4.1.4",
