--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,7 @@
   "emmet.showExpandedAbbreviation": "never",
   "[solidity]": {
     "editor.defaultFormatter": "JuanBlanco.solidity"
-  }
+  },
+  "solidity.defaultCompiler": "localFile",
+  "solidity.packageDefaultDependenciesDirectory": "./contracts/node_modules"
 }
