--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../contracts/typechain/*"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../contracts/typechain/*", "../contracts/scripts/constants/*"],
   "exclude": ["node_modules", ".next"]
 }
