de-couple contracts and frontend sides

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "solidity-ts-dev-stack-example",
-  "version": "0.0.3",
+  "name": "nextjs-web3-starter-contracts",
+  "version": "0.1.0",
   "description": "",
   "scripts": {
-    "build": "npm run clean && npm run compile",
+    "build": "npm run clean && npm run compile && ./batches/duplicate-types.sh",
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rhlsthrm/solidity-ts-dev-stack-example.git"
+    "url": "git+https://github.com/erhant/nextjs-web3-starter.git"
   },
-  "author": "rhlsthrm",
+  "author": "erhant",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rhlsthrm/solidity-ts-dev-stack-example/issues"
+    "url": "https://github.com/erhant/nextjs-web3-starter/issues"
   },
-  "homepage": "https://github.com/rhlsthrm/solidity-ts-dev-stack-example#readme",
+  "homepage": "https://github.com/erhant/nextjs-web3-starter#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
