--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,20 +24,18 @@
   },
   "homepage": "https://github.com/erhant/nextjs-web3-starter#readme",
   "dependencies": {
-    "@heroicons/react": "^2.0.10",
     "@mantine/core": "^4.2.0",
     "@mantine/hooks": "^4.2.0",
     "@mantine/next": "^4.2.0",
     "@mantine/notifications": "^4.2.0",
+    "@tabler/icons": "^1.113.0",
     "ethers": "^5.6.4",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "web3modal": "^1.9.7"
+    "wagmi": "^0.8.6"
   },
   "devDependencies": {
-    "@typechain/ethers-v5": "^10.0.0",
-    "@typechain/hardhat": "^6.1.0",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
